src/objects/Navigation_Page__c.object
<CustomObject>
    <description>One row for each navigation item on the drop down navigation menu</description>
    <fields>
        <fullName>Alt_Page_URL__c</fullName>
        <label>Alt Page URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hyperlink_Target__c</fullName>
        <label>Hyperlink Target</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Name_Hover__c</fullName>
        <label>Image Name Hover</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Name__c</fullName>
        <label>Image Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nav_Color__c</fullName>
        <description>Controls the color of the menu item</description>
        <label>Nav Color</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navigation_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Navigation Header</label>
        <referenceTo>Navigation_Header__c</referenceTo>
        <relationshipLabel>Navigation Pages</relationshipLabel>
        <relationshipName>Navigation_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Page_URL__c</fullName>
        <description>Short URL for the navigation menu.  This is the field that will control what gets opened when the link is clicked on</description>
        <label>Page URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>css_class__c</fullName>
        <label>css class</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Navigation Page</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Navigation_Header__c</columns>
        <columns>Page_URL__c</columns>
        <columns>Image_Name__c</columns>
        <columns>Image_Name_Hover__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Navigation Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Navigation Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>